Revision history for Perl module Dist-Zilla-Plugin-InstallRelease

{{$NEXT}}

0.003     2010-11-28
    * Use Perl_5 license

0.002     2010-11-13
    * Renamed from LocalInstall to InstallRelease

0.001     2010-10-18
    * Initial version
    * Added support for specifying the install command