@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-Plugin-InstallRelease
 
 {{$NEXT}}
+    * Attempt to detect failed installation
 
 0.003     2010-11-28
     * Use Perl_5 license
